--- a/dio-boostrap/index.html
+++ b/dio-boostrap/index.html
@@ -8,7 +8,22 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light" bg-light>
-            <a class="navbar-brand" href="#">Minha Página</a>
+            <a class="navbar-brand" href="#">
+                <img src="img/logo.png" width="120" height="60">
+            </a>
+            <div class="collapse navbar-collapse">
+             <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Quem Somos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Parceiros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Serviços</a>
+                  </li>
+                </ul>
+            </div>
         </nav>
     </body>
 </html>
