--- a/dio-boostrap/index.html
+++ b/dio-boostrap/index.html
@@ -14,16 +14,66 @@
             <div class="collapse navbar-collapse">
              <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Quem Somos</a>
+                    <a class="nav-link" href="#quemsomos">Quem Somos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Parceiros</a>
+                    <a class="nav-link" href="#parceiros">Parceiros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Serviços</a>
+                    <a class="nav-link" href="#servicos">Serviços</a>
                   </li>
                 </ul>
             </div>
         </nav>
+
+        <section id="quemsomos">
+            <div class="conteiner-fluid quem-somos text-center margin">
+                <h3>Quem somos</h3>
+                <img src="img/img3.jpg" class="rounded-circle" width="200" height="200">
+                <h3>Somos um time em treinamento</h3>
+            </div>
+        </section>
+
+        <section id="parceiros">
+            <div class="conteiner-fluid text-center margin parceiros">
+                <h3 class="margin">Parceiros</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="img/logo_fundo.png" width="50%">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/logo_fundo.png" width="50%">
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/logo_fundo.png" width="50%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="servicos">
+            <div class="container-fluid text-center margin servicos" >
+                <h3 class="margin">Serviços</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent consectetur, metus id molestie aliquet, metus eros vehicula erat, eu facilisis felis lectus eget erat.</p>
+                            <img src="img/img2.jpg" width="60%">
+                        </div>
+                        <div class="col-lg-6">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent consectetur, metus id molestie aliquet, metus eros vehicula erat, eu facilisis felis lectus eget erat.</p>
+                            <img src="img/img1.jpg" width="70%">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+         
+        <footer class="container-fluid text-center bg-footer margin">
+            <p>Desenvolvido por Frederico Gomes Cascão</p>
+        </footer>
+
     </body>
 </html>
