--- a/clone-netflix/index.html
+++ b/clone-netflix/index.html
@@ -8,6 +8,40 @@
     <title>Netflix Cone</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <h2 class="logo">NETFLIX</h2>
+            <nav>
+                <a href="#">Inicio</a>
+                <a href="#">Séries</a>
+                <a href="#">Filmes</a>
+                <a href="#">Documentários</a>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div class="filme-principal">
+                <div class="container">
+                     <h3 class="titulo">THE BIG BAN THEORY</h3>
+                     <p class="descricao">Leonard e Sheldon são dois jovens cientistas que moram juntos, sabem tudo de física, mas não parecem saber como se relacionar com mulheres. Seus únicos amigos são Howard e Rajesh, mas tudo pode mudar quando conhecem a nova vizinha, a bela Penny, que logo encanta Leonard.
+                     </p>
+                        <div class="botoes">
+                            <button role="button" class="botao">
+                                <i class="fa-solid fa-play"></i>
+                                ASSISTIR AGORA
+                            </button>
+                            <button role="button" class="botao">
+                                <i class="fa-solid fa-info"></i>
+                                MAIS INFORMAÇÕES
+                            </buttonn>
+                    </div>
+                </div>
+                
+        </div>
+    </main>
+
+
+    <script src="https://kit.fontawesome.com/6bcbdfc664.js" crossorigin="anonymous"></script>
 </body>
 </html>
