--- a/clone-netflix/index.html
+++ b/clone-netflix/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <!--responsividade-->
+    <link rel="stylesheet" href="style/responsive.css">
+
     <!--owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
@@ -38,7 +41,7 @@
                             </button>
                             <button role="button" class="botao">
                                 <i class="fa-solid fa-info"></i>
-                                MAIS INFORMAÇÕES
+                                 INFORMAÇÕES
                             </buttonn>
                     </div>
                 </div>
