--- a/clone-netflix/index.html
+++ b/clone-netflix/index.html
@@ -84,6 +84,11 @@
         </div>
     </div>
 
+    <footer class="rodape">
+        <p>Criado por Frederico Gomes Cascão - fredcascas@hotmail.com</p>
+        <p>Clone Netflix para estudo - Digital One</p>
+    </footer>
+
     <!--scrip javascript do site fontawsome / owl carousel para importar icones (i)-->
     <script src="https://kit.fontawesome.com/6bcbdfc664.js" crossorigin="anonymous"></script>
     <script src="js/owl/jquery.min.js"></script>
